@@ -2,7 +2,7 @@
 [%   label  = localise( f.option_label || '' ) | html -%]
 [%   IF label -%]
 [%     options = 'class="option-label" ' _ f.for_field -%]
-[%     output = '<label ' _ options _ '>' _ content _ label _ '</label>'-%]
+[%     output = '<label ' _ options _ '>' _ content _ label _ '</label>' -%]
 [%   ELSE; output = content; END -%]
 [%   IF f.get_tag( 'checkbox_element_wrapper' ) -%]
     <div class="checkbox">[% output %]</div>
